Dark mode colors fixed

--- a/src/app/post-single/post-single.component.scss
+++ b/src/app/post-single/post-single.component.scss
@@ -76,7 +76,7 @@ article {
       font-family: 'Fira Code', monospace;
     }
     code:not(.hljs) {
-      color: #333;
+      color: var(--red);
     }
     div.codewindow {
       background: #2d2b57;
