--- a/src/styles.scss
+++ b/src/styles.scss
@@ -22,11 +22,14 @@
 	}
 
 	.dark {
+    --red: #f93a3a;
+    --red-lightest: #2a1617;
     --bg: #0D1117;
     --post-list-item-bg: #181818;
 		--menu: rgba(82,0,0,.4);
 		--menu-item: rgba(255,255,255,0.69);
 		--text-color: #aaa;
+    --btn-light-hover: #461616;
 	}
 body {
 	background: var(--bg) !important;
@@ -70,7 +73,7 @@ h1 {
 .button-light {
   @extend .btn;
   background: var(--btn-light);
-  color: var(--text-color);
+  color: var(--red) !important;
   box-shadow: none;
   &:hover {
     box-shadow: none;
@@ -78,6 +81,7 @@ h1 {
     color:var(--text-color);
   }
 }
+
 
 /* Importing Bootstrap SCSS file. */
 @import '~bootstrap/scss/bootstrap';
